<resources>
    <string name="app_name">Project Nilaiku</string>
    <string name="Nim">NIM :</string>
    <string name="Nama">Nama :</string>
    <string name="tugas">Nilai Tugas :</string>
    <string name="uas">Nilai UAS :</string>
    <string name="uts">Nilai UTS :</string>
    <string name="akhir">Nilai Akhir :</string>
    <string name="huruf">Nilai Huruf :</string>
    <string name="predikat">Predikat :</string>
</resources>